--- a/lab04.ipynb
+++ b/lab04.ipynb
@@ -21,7 +21,7 @@
     "  n = int(input(\"Nhap so nguyen n (1<n<1000): \"))\n",
     "else: \n",
     "    tong = (1 + n) * n /2\n",
-    "print(tong)\n"
+    "print(tong)"
    ]
   },
   {
@@ -242,6 +242,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ad2fdae",
+   "metadata": {},
+   "source": [
+    "W4A10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2b68b9e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "5163dfe2",
    "metadata": {},
    "source": [
@@ -341,6 +357,22 @@
     "        a.append(i)\n",
     "print(max(a))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0ae90e3",
+   "metadata": {},
+   "source": [
+    "W4A15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cd2eb34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -463,6 +495,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d2964e79",
+   "metadata": {},
+   "source": [
+    "W4A21"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68e0978b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "7a83a2f6",
    "metadata": {},
    "source": [
@@ -489,6 +537,38 @@
     "\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da5a5cf8",
+   "metadata": {},
+   "source": [
+    "W4A23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a601ac62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4903c4a7",
+   "metadata": {},
+   "source": [
+    "W4A24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccdb9020",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -539,6 +619,134 @@
     "        return fibonacci(n-1) + fibonacci(n-2)\n",
     "print(fibonacci(n))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "321130be",
+   "metadata": {},
+   "source": [
+    "W4A27"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4b900cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8a91dca",
+   "metadata": {},
+   "source": [
+    "W4A28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6803a95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18c7f960",
+   "metadata": {},
+   "source": [
+    "W4A29"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93af4da7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e365494",
+   "metadata": {},
+   "source": [
+    "W4A30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00f9d85b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3cbcac6",
+   "metadata": {},
+   "source": [
+    "W4A31"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f7971bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aabd55a",
+   "metadata": {},
+   "source": [
+    "W4A32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a412d313",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60914ab0",
+   "metadata": {},
+   "source": [
+    "W4A33"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84c43100",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a658b50",
+   "metadata": {},
+   "source": [
+    "W4A34"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d92ed798",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
